fixed spacing on my image

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
     --bor20: 20px;
     --mar30: 30px;
     --icon60: 60px;
+    --mar40: 40px;
 }
 
 * {
@@ -105,25 +106,29 @@ h4 {
 
 p {
     margin-right: 4%;
+    padding-left: var(--pad20);
 }
 
 footer {
     display: flex;
     background-color: var(--dark);
-    min-height: 100px;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-around;
     border-top: solid var(--white);
 }
 
 footer span {
-    margin: 40px 60px;
+    margin: var(--mar30);
+}
+
+footer nav {
+    display: flex;
+    align-items: center;
 }
 
 .my-img {
     background-image: url("../assets/images/headshot.png");
-    min-height: 200px;
-    min-width: 200px;
+    height: 25vw;
+    width: 25vw;
     background-size: cover;
     background-color: var(--dark);
     border-style: solid;
@@ -134,7 +139,6 @@ footer span {
 }
 
 .section {
-    padding-left: var(--pad20);
     color: var(--white);
 }
 
